--- a/.github/workflows/jobs-examples.yml
+++ b/.github/workflows/jobs-examples.yml
@@ -2,13 +2,22 @@ name: jobs examples
 on:
 push
 jobs:
-job1:
+build:
 runs-on: ubuntu-latest
 steps:
-- name: step do job1
-run: echo Hello, world! job1.
-job2:
+- name: create an artifact for reuse
+run: echo “Full featured artifact” > build-result.txt
+- uses: actions/upload-artifact@v2
+with:
+name: build-result
+path: build-result.txt
+deploy:
 runs-on: ubuntu-latest
+needs: build
 steps:
-- name: step do job2
-run: echo Hello, world! Job2.
+- uses: actions/download-artifact@v2
+with:
+name: build-result
+path: build-result.txt
+- name: use of artifact created
+run: ls build-result.txt
