--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,12 +1,9 @@
 name: conchayoro-pipeline
- 
 on:
-  push:
-    branches: [ "main" ]
- 
+workflow_dispatch
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:            
-      - name: executa comando
-        run: echo "Configuração inicial do pipeline"
+build:
+runs-on: ubuntu-latest
+steps:
+- name: executa comando
+run: echo "Configuração inicial do pipeline"
