--- a/.github/workflows/ansible-basic.yml
+++ b/.github/workflows/ansible-basic.yml
@@ -1,10 +1,11 @@
 name: Ansible basic
 on: workflow_dispatch
 jobs:
-  ansible-version:
-   runs-on: ubuntu-latest
-   steps:
-     - uses: actions/setup-python@v3
-       with:
-         python-version: '3.10'
-     - run: ansible --version
+  ansible-ping:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
+        with:
+          python-version: '3.10'
+      - run: ansible-playbook .environment/ping.yml
